Fix line breaks in personae details

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -454,6 +454,10 @@ pre code {
     background-size: contain;
 }
 
+[class*="persona-background-"] {
+    overflow-wrap: break-word;
+}
+
 @media (min-width: 1024px) {
     .step-1 {
         margin-top: 150px;
